# shelldon

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: config.rs  error.rs  main.rs  processor.rs  system.rs
src/backend/: genai.rs  mod.rs  openai.rs
src/command/: ask.rs  exec.rs  mod.rs  prompts.rs
