[package]
name = "shelldon"
version = "0.1.0"
edition = "2021"
authors = ["Douglas Mendez <douglasmakey@gmail.com>"]
description = "Shelldon is your new Rust-powered buddy with GPT features!"
readme = "README.md"
license = "MIT"
repository = "https://github.com/douglasmakey/shelldon"
keywords = ["shell", "gpt", "ai"]
categories = ["development-tools", "text-processing", "command-line-utilities"]
exclude = [
    ".github",
    "assets",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.21.0"
async-stream = "0.3.5"
atty = "0.2.14"
clap = { version = "4.5.4", features = ["derive"] }
comfy-table = "7.1.1"
derive_more = { version = "0.99.17", features = ["from", "display"] }
dialoguer = "0.11.0"
dirs = "5.0.1"
futures = "0.3.30"
regex = "1.10.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
